[header] Fixes padding causing a scrollbar to exist.

--- a/radiant/static/less/site.less
+++ b/radiant/static/less/site.less
@@ -324,6 +324,8 @@ body.radiant-human {
       //background: black;
     }
     .film-strip {
+      padding: 0;
+
       img {
         width: 100%;
       }
@@ -335,7 +337,7 @@ body.radiant-human {
       padding-right: 40px;
       padding-bottom: 40px;
       font-size: 18px;
-      max-height: 1450px;
+      max-height: 1550px;
       overflow-y: scroll;
 
 
